# SimpleAsyncChat

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  setup.cfg  start.py
async_chat/: app.py  models.py
templates/: chat_page.html  last_messages_page.html
tests/: test_app.py
